--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~locomotive-scroll/dist/locomotive-scroll.css';
+
+body {
+  margin: 0;
+}
+
